# verifio

./: .dockerignore  .gitignore  CLAUDE.md  ENV_GUIDE.md  LICENSE  README.md  biome.json  env.global  implementation_plan.md.resolved  package.json  tsconfig.json  turbo.json
.agent/workflows/: border-styling.md
.github/workflows/: be-api-key.yml  be-auth.yml  be-credits.yml  be-logs.yml  be-tools.yml  be-upload.yml  be-verify.yml  be-workflow.yml  db-migrate.yml  fe-blog.yml  fe-dashboard.yml  fe-docs.yml  fe-web.yml  publish-node-sdk.yml  publish-sdk.yml
SDK/.net/: BulkService.cs  Exceptions.cs  HistoryService.cs  Models.cs  Program.cs  README.md  ReloopSdk.csproj  Verifio.csproj  VerifioClient.cs  VerifioSdk.cs  VerifyService.cs
SDK/go/: README.md  bulk.go  client.go  errors.go  go.mod  hello_world.go  history.go  types.go  verifio.go  verify.go
SDK/java/: HelloWorld.java  README.md  pom.xml
SDK/node/: .npmignore  LICENSE  README.md  package.json  tsconfig.json
SDK/node/src/: bulk.ts  client.ts  errors.ts  history.ts  index.ts  types.ts  verify.ts
SDK/php/: README.md  composer.json  hello_world.php
SDK/php/src/: BulkService.php  HistoryService.php  Verifio.php  VerifioClient.php  VerifyService.php
SDK/python/: README.md  hello_world.py  requirements.txt  setup.py
SDK/python/verifio/: __init__.py  bulk.py  client.py  errors.py  history.py  types.py  verify.py
SDK/rust/: Cargo.toml  README.md
SDK/rust/src/: bulk.rs  client.rs  error.rs  history.rs  lib.rs  main.rs  types.rs  verify.rs
local/: Caddyfile  docker-compose.yml  init-db.sh
(+854 files in other folders)
