[package]
name = "verifio-email-verification"
version = "1.0.0"
edition = "2021"
description = "Official Rust SDK for Verifio email verification"
authors = ["Verifio"]
repository = "https://github.com/verifio-email/verifio"
homepage = "https://verifio.email"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
